# WoSim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yarnrc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build-hub.ts  nuxt.config.js  package-lock.json  package.json  release.ts  rust-toolchain.toml  vetur.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml  website.yml
actor/: Cargo.toml
actor/src/: actor.rs  address.rs  flow.rs  lib.rs  mailbox.rs  promise.rs  sender.rs
client/: Cargo.toml  build.rs
client/shaders/: cull.comp  scene.frag  scene.vert
client/src/: context.rs  debug.rs  error.rs  frame.rs  main.rs  renderer.rs  resolver.rs  shaders.rs  transfer.rs  view.rs  vulkan.rs  winit.rs
client/src/cull/: context.rs  frame.rs
client/src/depth/: context.rs  frame.rs  mod.rs  view.rs
client/src/egui/: context.rs  error.rs  font.rs  frame.rs  mod.rs  view.rs
client/src/scene/: context.rs  frame.rs  mod.rs  view.rs
common/: Cargo.toml
common/actor/: Cargo.toml
common/actor/src/: address.rs  mailbox.rs  promise.rs  sender.rs  task_queue.rs
common/base/: Cargo.toml
common/net/: Cargo.toml
common/net/src/: address.rs  authenticator.rs  connect.rs  connection.rs  error.rs  host.rs  lib.rs  listen.rs  message.rs  protocol.rs  reader.rs  receiver.rs  sender.rs  writer.rs
common/src/: shader.rs
common/src/vulkan/: device.rs  error.rs  instance.rs  version.rs
common/util/: Cargo.toml
common/util/src/: handle.rs  lib.rs
common/vulkan/: Cargo.toml
common/vulkan/src/: buffer.rs  command.rs  descriptor.rs  image.rs  lib.rs  object.rs  physical_device.rs  swapchain.rs
content/: home.md
db/: Cargo.toml
db/src/: cursor.rs  database.rs  file.rs  free_list.rs  lib.rs  lock.rs  mmap.rs  object.rs  page.rs  raw.rs  reference.rs  sync.rs  vec.rs
db/src/tree/: cursor.rs
headless/: Cargo.toml
headless/src/: error.rs  main.rs  vulkan.rs
hub/: .gitignore  CHANGELOG.md  README.md  jest.config.js  nuxt.config.js  package.json  tsconfig.json
hub/.github/workflows/: ci.yml  release.yml
hub/api/: releases.ts
hub/content/: home.md
hub/layouts/: default.vue
hub/pages/: index.vue  releases.vue
hub/plugins/: http.ts
hub/server/: release.js
hub/server/content/releases/: v0.1.0-alpha.3.md
hub/server/static/: CNAME
hub/src-tauri/: Cargo.toml
hub/src-tauri/icons/: about.txt
hub/src-tauri/src/: main.rs
hub/tests/: setup.ts
interop/: Cargo.toml
interop/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: configuration.rs  env.rs  icon.rs  installation.rs  main.rs  message.rs  scan.rs  server.rs  shell.rs  style.rs  theme.rs  world.rs
launcher/src/component/: create_world.rs  delete_world.rs  installation_option.rs  mod.rs  root.rs  server.rs  world.rs
layouts/: default.vue
net/: Cargo.toml
net/src/: address.rs  auth_token.rs  authenticator.rs  client.rs  connect.rs  connection.rs  error.rs  from.rs  lib.rs  listen.rs  listener.rs  message.rs  reader.rs  recv_error.rs  recv_queue.rs  resolver.rs  return.rs  send_error.rs  sender.rs  server.rs  service.rs  session.rs  verification.rs  writer.rs
net/src/remote/: mod.rs  server.rs  stats.rs  util.rs
net/src/remote/recv/: connection.rs  error.rs  listen.rs  listener.rs  mod.rs  return.rs  stream.rs
net/src/remote/send/: connection.rs  error.rs  mod.rs  return.rs  stream.rs
server/: Cargo.toml  nuxt.config.js  package.json  release.js
server/content/releases/: v0.1.0-alpha.2.md
server/src/: address.rs  authenticator.rs  connection.rs  error.rs  handle.rs  identity.rs  lib.rs  main.rs  message.rs  resolver.rs  server.rs  service.rs  state.rs  token.rs  user.rs  vulkan.rs
server/static/: latest.json
src-tauri/: Cargo.toml  tauri.conf.json
tests/: index.spec.ts
util/: Cargo.toml
util/src/: asset.rs  lib.rs
vulkan/: Cargo.toml
vulkan/src/: buffer.rs  command.rs  device.rs  error.rs  instance.rs  lib.rs  object.rs  physical_device.rs  transfer.rs  version.rs
website/: README.md  jest.config.js  nuxt.config.js  package.json
website/.github/workflows/: ci.yml  deploy.yml
website/content/: home.md
website/layouts/: default.vue
website/pages/: download.vue  index.vue
website/static/: CNAME  hub.json
website/static/hub/: latest.json
website/types/: vue-shim.d.ts
wosim/: Cargo.toml  build.rs
wosim-common/: Cargo.toml
wosim-common/src/: lib.rs
wosim-common/src/vulkan/: buffer.rs  command.rs  device.rs  error.rs  handle.rs  image.rs  instance.rs  mod.rs  object.rs  surface.rs  swapchain.rs
wosim-server/: Cargo.toml
wosim-server/src/: error.rs  lib.rs  main.rs  vulkan.rs
wosim/shaders/: common.glsl  cull.comp  default.frag  default.vert  depth_pyramid.comp  egui.frag  egui.vert  scene.vert
wosim/src/: context.rs  debug.rs  error.rs  frame.rs  main.rs  renderer.rs  shaders.rs  view.rs  vulkan.rs
wosim/src/cull/: context.rs  mod.rs
wosim/src/depth/: context.rs  frame.rs  view.rs
wosim/src/egui/: context.rs  font.rs  mod.rs  view.rs
wosim/src/scene/: data.rs  view.rs
