[package]
name = "wosim"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"

[dependencies]
actor = { path = "../actor", package = "wosim-actor" }
ash-window = "0.6"
copypasta = "0.7.1"
egui = "0.12.0"
env_logger = "0.8.3"
interop = { path = "../interop", package = "wosim-interop" }
log = "0.4.14"
nalgebra = "0.26.1"
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "time"] }
semver = "0.11.0"
serde_json = "1.0.59"
server = { path = "../server", package = "wosim-server" }
structopt = "0.3.21"
util = { path = "../util", package = "wosim-util" }
vulkan = { path = "../vulkan", package = "wosim-vulkan" }
webbrowser = "0.5.5"
winit = "0.24"

[build-dependencies]
build = { path = "../build", package = "wosim-build" }
