[package]
name = "wosim"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"
publish = false

[dependencies]
ash-window = "0.6"
base64 = "0.13.0"
copypasta = "0.7.1"
egui = "0.12.0"
env_logger = "0.8.3"
eyre = "0.6.5"
stable-eyre = "0.2.2"
log = "0.4.14"
nalgebra = "0.26.1"
net = { path = "../net", package = "wosim-net" }
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "time"] }
semver = "0.11.0"
server = { path = "../server", package = "wosim-server" }
structopt = "0.3.21"
thiserror = "1.0.25"
tracing = { version = "0.1.26", features = ["log-always"] }
util = { path = "../util", package = "wosim-util" }
uuid = { version = "0.8.2", features = ["v4"] }
vulkan = { path = "../vulkan", package = "wosim-vulkan" }
webbrowser = "0.5.5"
winit = "0.24"

[build-dependencies]
build = { path = "../build", package = "wosim-build" }
eyre = "0.6.5"
stable-eyre = "0.2.2"
