[package]
name = "wosim-interop"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
semver = { version = "0.11.0", features = ["serde"] }
