[package]
name = "wosim-net"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"

[dependencies]
actor = { path = "../actor", package = "wosim-actor" }
bincode = "1.3.3"
bytes = "1.0.1"
futures = "0.3.14"
log = "0.4.14"
serde = "1.0.125"
tokio = { version = "1.5.0", features = ["rt"] }
util = { path = "../util", package = "wosim-util" }
quinn = "0.7.2"
