[package]
name = "wosim-server"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"

[dependencies]
actor = { path = "../actor", package = "wosim-actor" }
bytemuck = { version = "1.5.1", features = ["derive"] }
ctrlc = "3.1.9"
db = { path = "../db", package = "wosim-db" }
env_logger = "0.8.3"
log = "0.4.14"
net = { path = "../net", package = "wosim-net" }
quinn = "0.7.2"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "time"] }
util = { path = "../util", package = "wosim-util" }
vulkan = { path = "../vulkan", package = "wosim-vulkan" }
webpki = "0.21"

[[bin]]
name = "wosim-server"
