[package]
name = "wosim"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"

[dependencies]
ash-window = "0.6"
winit = "0.24"
wosim-common = { path = "../wosim-common" }
wosim-server = { path = "../wosim-server" }
