[package]
name = "wosim"
version = "0.1.0"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
workspace = ".."
edition = "2018"

[dependencies]
ash-window = "0.6"
bytemuck = "1.5"
copypasta = "0.7.1"
egui = "0.11.0"
nalgebra = "0.26.1"
webbrowser = "0.5.5"
winit = "0.24"
wosim-common = { path = "../wosim-common" }
wosim-server = { path = "../wosim-server" }

[build-dependencies]
wosim-build = { path = "../wosim-build" }
