[package]
name = "wosim-hub"
version = "0.1.0-alpha.3"
description = "The official WoSim hub"
authors = ["Edgar Geier <egeier@rhrk.uni-kl.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"
publish = false

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
